--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # Edit next line, providing your own name.
 title: Chin Ting Liao | Professional Portfolio
 # Edit next line, replacing 'techfolios' with your github username
-url: "http://chintingliao.github.io/
+url: "http://chintingliao.github.io/"
 # Edit next line so that baseurl is "" if your repo is <username>.github.io
 baseurl: ""
 
